exports[`no-stripe > should put files 1`] = `
[
  "internal-tests-output-no-stripe/.editorconfig",
  "internal-tests-output-no-stripe/.env",
  "internal-tests-output-no-stripe/.env.sample",
  "internal-tests-output-no-stripe/.env.test",
  "internal-tests-output-no-stripe/.github/actions/setup-db/action.yml",
  "internal-tests-output-no-stripe/.github/actions/setup-node/action.yml",
  "internal-tests-output-no-stripe/.github/copilot-instructions.md",
  "internal-tests-output-no-stripe/.github/workflows/ci.yml",
  "internal-tests-output-no-stripe/.github/workflows/migration.yml",
  "internal-tests-output-no-stripe/.gitignore",
  "internal-tests-output-no-stripe/.internal/.gitignore",
  "internal-tests-output-no-stripe/.internal/README.md",
  "internal-tests-output-no-stripe/.internal/create-app-foundation/README.md",
  "internal-tests-output-no-stripe/.internal/create-app-foundation/package.json",
  "internal-tests-output-no-stripe/.internal/create-app-foundation/pnpm-lock.yaml",
  "internal-tests-output-no-stripe/.internal/create-app-foundation/src/git.mjs",
  "internal-tests-output-no-stripe/.internal/create-app-foundation/src/index.mjs",
  "internal-tests-output-no-stripe/.internal/setup/code/app-(public)-page.tsx",
  "internal-tests-output-no-stripe/.internal/setup/code/app-layout.tsx",
  "internal-tests-output-no-stripe/.internal/setup/common-processing.mjs",
  "internal-tests-output-no-stripe/.internal/setup/db.mjs",
  "internal-tests-output-no-stripe/.internal/setup/format.mjs",
  "internal-tests-output-no-stripe/.internal/setup/init.mjs",
  "internal-tests-output-no-stripe/.internal/setup/package-json.mjs",
  "internal-tests-output-no-stripe/.internal/setup/questions/docker.mjs",
  "internal-tests-output-no-stripe/.internal/setup/questions/e2e.mjs",
  "internal-tests-output-no-stripe/.internal/setup/questions/index.mjs",
  "internal-tests-output-no-stripe/.internal/setup/questions/otel.mjs",
  "internal-tests-output-no-stripe/.internal/setup/questions/sample-code.mjs",
  "internal-tests-output-no-stripe/.internal/setup/questions/stripe.mjs",
  "internal-tests-output-no-stripe/.internal/setup/utils.mjs",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/@theme_index.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/@theme_index.js.map",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/_metadata.json",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/chunk-5OYVI2TY.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/chunk-5OYVI2TY.js.map",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/chunk-CQOUZRMK.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/chunk-CQOUZRMK.js.map",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/package.json",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/vitepress___@vue_devtools-api.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/vitepress___@vue_devtools-api.js.map",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/vitepress___@vueuse_core.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/vitepress___@vueuse_core.js.map",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/vue.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/cache/deps/vue.js.map",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/config.mts",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/404.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/app.BZlZU4Qp.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/docker.BG773L8L.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/framework.P9qPzDnn.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/next-auth.D8dyw42M.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/nextjs.YXzZzXcq.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/otel.29JQ0aHQ.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/playwright.DZ_xk9Uj.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/prisma.Dxle-em_.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/testcontainers.d5EdFJdZ.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/testing-library.DfqiJu8-.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/theme.CrUO_k8X.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/chunks/zod.C12Pnpn6.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_ai.md.BR-31GLn.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_ai.md.BR-31GLn.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_e2e-testing.md.Bcax1-96.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_e2e-testing.md.Bcax1-96.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_git.md.GwdcPz1e.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_git.md.GwdcPz1e.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_next-auth.md.D91BAtqh.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_next-auth.md.D91BAtqh.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_nextjs.md.CiFF1U6n.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_nextjs.md.CiFF1U6n.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_observability.md.cufO1RzN.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_observability.md.cufO1RzN.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_prisma.md.C-Sen9Hx.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_prisma.md.C-Sen9Hx.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_unit-testing.md.DwtZAEZ7.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/features_unit-testing.md.DwtZAEZ7.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/index.md.Cner43_D.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/index.md.Cner43_D.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-italic-cyrillic-ext.r48I6akx.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-italic-cyrillic.By2_1cv3.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-italic-greek-ext.1u6EdAuj.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-italic-greek.DJ8dCoTZ.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-italic-latin-ext.CN1xVJS-.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-italic-latin.C2AdPX0b.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-italic-vietnamese.BSbpV94h.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-roman-cyrillic-ext.BBPuwvHQ.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-roman-cyrillic.C5lxZ8CY.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-roman-greek-ext.CqjqNYQ-.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-roman-greek.BBVDIX6e.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-roman-latin-ext.4ZJIpNVo.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-roman-latin.Di8DUHzh.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/inter-roman-vietnamese.BjW4sHH5.woff2",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/introduction_challenges-solved.md.DlRNsA2b.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/introduction_challenges-solved.md.DlRNsA2b.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/introduction_getting-started.md.DpjxUv2p.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/introduction_getting-started.md.DpjxUv2p.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/introduction_what-is-web-app-template.md.Cz6dJhNz.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/introduction_what-is-web-app-template.md.Cz6dJhNz.lean.js",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/assets/style.CLB91A0I.css",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/features/ai.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/features/e2e-testing.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/features/git.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/features/next-auth.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/features/nextjs.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/features/observability.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/features/prisma.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/features/unit-testing.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/hashmap.json",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/icon.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/biome.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/docker.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/github-actions.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/images.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/lint-staged.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/next-auth.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/nextjs.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/otel.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/playwright.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/pnpm.svg",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/prettier.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/prisma.svg",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/react-hook-form.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/renovate.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/tailwind.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/testcontainers.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/testing-library.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/typescript.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/vitest.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/vscode.png",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/images/libs/zod.svg",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/index.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/introduction/challenges-solved.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/introduction/getting-started.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/introduction/what-is-web-app-template.html",
  "internal-tests-output-no-stripe/.internal/site/.vitepress/dist/vp-icons.css",
  "internal-tests-output-no-stripe/.internal/site/package.json",
  "internal-tests-output-no-stripe/.internal/site/pnpm-lock.yaml",
  "internal-tests-output-no-stripe/.internal/site/src/features/code-quality-automation.md",
  "internal-tests-output-no-stripe/.internal/site/src/features/copilot.md",
  "internal-tests-output-no-stripe/.internal/site/src/features/e2e-testing.md",
  "internal-tests-output-no-stripe/.internal/site/src/features/next-auth.md",
  "internal-tests-output-no-stripe/.internal/site/src/features/nextjs.md",
  "internal-tests-output-no-stripe/.internal/site/src/features/observability.md",
  "internal-tests-output-no-stripe/.internal/site/src/features/prisma.md",
  "internal-tests-output-no-stripe/.internal/site/src/features/unit-testing.md",
  "internal-tests-output-no-stripe/.internal/site/src/index.md",
  "internal-tests-output-no-stripe/.internal/site/src/introduction/challenges-solved.md",
  "internal-tests-output-no-stripe/.internal/site/src/introduction/dotenv.md",
  "internal-tests-output-no-stripe/.internal/site/src/introduction/getting-started.md",
  "internal-tests-output-no-stripe/.internal/site/src/introduction/routing.md",
  "internal-tests-output-no-stripe/.internal/site/src/introduction/tasks.md",
  "internal-tests-output-no-stripe/.internal/site/src/introduction/what-is-web-app-template.md",
  "internal-tests-output-no-stripe/.internal/site/src/public/favicon.ico",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/icon.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/biome.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/copilot.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/docker.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/editorconfig.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/github-actions.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/knip.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/lefthook.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/next-auth.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/nextjs.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/otel.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/playwright.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/pnpm.svg",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/postgresql.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/prettier.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/prisma.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/react-hook-form.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/renovate.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/tailwind.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/testcontainers.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/testing-library.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/typescript.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/vitest.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/vscode.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/libs/zod.svg",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/otel/query.png",
  "internal-tests-output-no-stripe/.internal/site/src/public/images/otel/root-metric.png",
  "internal-tests-output-no-stripe/.internal/tests/Basetest.mjs",
  "internal-tests-output-no-stripe/.internal/tests/all-opt-out.test.mjs",
  "internal-tests-output-no-stripe/.internal/tests/common.test.mjs",
  "internal-tests-output-no-stripe/.internal/tests/common.test.mjs.snapshot",
  "internal-tests-output-no-stripe/.internal/tests/makefile",
  "internal-tests-output-no-stripe/.internal/tests/no-docker.test.mjs",
  "internal-tests-output-no-stripe/.internal/tests/no-docker.test.mjs.snapshot",
  "internal-tests-output-no-stripe/.internal/tests/no-e2e.test.mjs",
  "internal-tests-output-no-stripe/.internal/tests/no-e2e.test.mjs.snapshot",
  "internal-tests-output-no-stripe/.internal/tests/no-otel.test.mjs",
  "internal-tests-output-no-stripe/.internal/tests/no-otel.test.mjs.snapshot",
  "internal-tests-output-no-stripe/.internal/tests/no-sample-code.test.mjs",
  "internal-tests-output-no-stripe/.internal/tests/no-sample-code.test.mjs.snapshot",
  "internal-tests-output-no-stripe/.internal/tests/no-stripe.test.mjs",
  "internal-tests-output-no-stripe/.internal/tests/no-stripe.test.mjs.snapshot",
  "internal-tests-output-no-stripe/.node-version",
  "internal-tests-output-no-stripe/.npmrc",
  "internal-tests-output-no-stripe/.vscode/extensions.json",
  "internal-tests-output-no-stripe/.vscode/settings.json",
  "internal-tests-output-no-stripe/Dockerfile",
  "internal-tests-output-no-stripe/README.md",
  "internal-tests-output-no-stripe/biome.json",
  "internal-tests-output-no-stripe/compose.yml",
  "internal-tests-output-no-stripe/env.ts",
  "internal-tests-output-no-stripe/knip.config.ts",
  "internal-tests-output-no-stripe/lefthook.yml",
  "internal-tests-output-no-stripe/next.config.ts",
  "internal-tests-output-no-stripe/otel-collector-config.yml",
  "internal-tests-output-no-stripe/package.json",
  "internal-tests-output-no-stripe/playwright.config.ts",
  "internal-tests-output-no-stripe/pnpm-lock.yaml",
  "internal-tests-output-no-stripe/postcss.config.mjs",
  "internal-tests-output-no-stripe/prisma/ERD.md",
  "internal-tests-output-no-stripe/prisma/migrations/migration_lock.toml",
  "internal-tests-output-no-stripe/prisma/schema.prisma",
  "internal-tests-output-no-stripe/public/.gitkeep",
  "internal-tests-output-no-stripe/renovate.json",
  "internal-tests-output-no-stripe/src/app/(private)/layout.tsx",
  "internal-tests-output-no-stripe/src/app/(private)/me/_components/UpdateMyInfo.tsx",
  "internal-tests-output-no-stripe/src/app/(private)/me/page.tsx",
  "internal-tests-output-no-stripe/src/app/(public)/layout.tsx",
  "internal-tests-output-no-stripe/src/app/(public)/page.tsx",
  "internal-tests-output-no-stripe/src/app/(public)/signin/page.tsx",
  "internal-tests-output-no-stripe/src/app/@dialog/(.)create/Content.tsx",
  "internal-tests-output-no-stripe/src/app/@dialog/(.)create/default.tsx",
  "internal-tests-output-no-stripe/src/app/@dialog/(.)create/page.tsx",
  "internal-tests-output-no-stripe/src/app/@dialog/_components/Dialog.tsx",
  "internal-tests-output-no-stripe/src/app/@dialog/default.tsx",
  "internal-tests-output-no-stripe/src/app/@dialog/page.tsx",
  "internal-tests-output-no-stripe/src/app/_actions/items.test.ts",
  "internal-tests-output-no-stripe/src/app/_actions/items.ts",
  "internal-tests-output-no-stripe/src/app/_actions/test.helper.ts",
  "internal-tests-output-no-stripe/src/app/_actions/types.ts",
  "internal-tests-output-no-stripe/src/app/_actions/users.test.ts",
  "internal-tests-output-no-stripe/src/app/_actions/users.ts",
  "internal-tests-output-no-stripe/src/app/_clients/nextAuth.ts",
  "internal-tests-output-no-stripe/src/app/_clients/nextAuthConfig.ts",
  "internal-tests-output-no-stripe/src/app/_clients/prisma.ts",
  "internal-tests-output-no-stripe/src/app/_components/Button.tsx",
  "internal-tests-output-no-stripe/src/app/_components/Container.tsx",
  "internal-tests-output-no-stripe/src/app/_components/ErrorPageTemplate.tsx",
  "internal-tests-output-no-stripe/src/app/_components/Footer.tsx",
  "internal-tests-output-no-stripe/src/app/_components/FormBox.tsx",
  "internal-tests-output-no-stripe/src/app/_components/Header.tsx",
  "internal-tests-output-no-stripe/src/app/_components/Input.tsx",
  "internal-tests-output-no-stripe/src/app/_components/SignInButton.tsx",
  "internal-tests-output-no-stripe/src/app/_components/SignOutButton.tsx",
  "internal-tests-output-no-stripe/src/app/_hooks/useOnlineStatus.test.ts",
  "internal-tests-output-no-stripe/src/app/_hooks/useOnlineStatus.ts",
  "internal-tests-output-no-stripe/src/app/_schemas/items.test.ts",
  "internal-tests-output-no-stripe/src/app/_schemas/items.ts",
  "internal-tests-output-no-stripe/src/app/_schemas/users.test.ts",
  "internal-tests-output-no-stripe/src/app/_schemas/users.ts",
  "internal-tests-output-no-stripe/src/app/_utils/date.test.ts",
  "internal-tests-output-no-stripe/src/app/_utils/date.ts",
  "internal-tests-output-no-stripe/src/app/_utils/db.test.ts",
  "internal-tests-output-no-stripe/src/app/_utils/db.ts",
  "internal-tests-output-no-stripe/src/app/_utils/zod.test.ts",
  "internal-tests-output-no-stripe/src/app/_utils/zod.ts",
  "internal-tests-output-no-stripe/src/app/api/auth/[...nextauth]/route.ts",
  "internal-tests-output-no-stripe/src/app/api/health/route.ts",
  "internal-tests-output-no-stripe/src/app/api/payment/checkout/route.ts",
  "internal-tests-output-no-stripe/src/app/api/payment/webhook/route.ts",
  "internal-tests-output-no-stripe/src/app/error.tsx",
  "internal-tests-output-no-stripe/src/app/favicon.ico",
  "internal-tests-output-no-stripe/src/app/global-error.tsx",
  "internal-tests-output-no-stripe/src/app/globals.css",
  "internal-tests-output-no-stripe/src/app/globals.d.ts",
  "internal-tests-output-no-stripe/src/app/layout.tsx",
  "internal-tests-output-no-stripe/src/app/not-found.tsx",
  "internal-tests-output-no-stripe/src/app/opengraph-image.tsx",
  "internal-tests-output-no-stripe/src/app/robots.txt",
  "internal-tests-output-no-stripe/src/instrumentation.ts",
  "internal-tests-output-no-stripe/src/middleware.test.ts",
  "internal-tests-output-no-stripe/src/middleware.ts",
  "internal-tests-output-no-stripe/src/otel/node.ts",
  "internal-tests-output-no-stripe/tests/db.setup.ts",
  "internal-tests-output-no-stripe/tests/vitest.setup.ts",
  "internal-tests-output-no-stripe/tsconfig.json",
  "internal-tests-output-no-stripe/vitest.config.ts",
  "mocked/migration.sql"
]
`;

exports[`no-stripe > should update .env.sample 1`] = `
[
  "# Next.js",
  "NEXT_PUBLIC_SITE_URL=http://localhost:3000",
  "",
  "# Database",
  "DATABASE_USER=dev",
  "DATABASE_PASSWORD=1234",
  "DATABASE_DB=dev",
  "DATABASE_HOST=localhost",
  "DATABASE_PORT=5432",
  "DATABASE_SCHEMA=public",
  "# for prisma migration",
  "DATABASE_URL=postgresql://\${DATABASE_USER}:\${DATABASE_PASSWORD}@\${DATABASE_HOST}:\${DATABASE_PORT}/\${DATABASE_DB}?schema=\${DATABASE_SCHEMA}",
  "",
  "# Google OAuth",
  "# https://console.cloud.google.com/apis/credentials",
  "# Set values below",
  "# AUTHORIZED JAVASCRIPT ORIGINS: http://localhost:3000",
  "# AUTHORIZED REDIRECT URIS: http://localhost:3000/api/auth/callback/google",
  "GOOGLE_CLIENT_ID=xxxx",
  "GOOGLE_CLIENT_SECRET=xxxx",
  "",
  "# NextAuth.js",
  "NEXTAUTH_URL=\${NEXT_PUBLIC_SITE_URL}",
  "# https://next-auth.js.org/configuration/options#secret",
  "# you must generate a new secret",
  "# error: \\"ikm\\" must be at least one byte in length'",
  "# $ openssl rand -base64 32",
  "NEXTAUTH_SECRET=TKDdLVjf7cTyTs5oWVpv04senu6fia4RGQbYHRQIR5Q=",
  "",
  "# OpenTelemetry",
  "TRACE_EXPORTER_URL=",
  "",
  "# start: stripe #",
  "# Stripe",
  "STRIPE_SECRET_KEY=xxxx",
  "STRIPE_WEBHOOK_SECRET=xxxx",
  "STRIPE_PRICE_ID=xxxx",
  "# end: stripe #",
  ""
]
`;

exports[`no-stripe > should update .env.test 1`] = `
[
  "# Next.js",
  "NEXT_PUBLIC_SITE_URL=http://localhost:3000",
  "",
  "# Database",
  "DATABASE_USER=test",
  "DATABASE_PASSWORD=1234",
  "DATABASE_DB=test",
  "DATABASE_HOST=localhost",
  "DATABASE_PORT=5432",
  "DATABASE_SCHEMA=public",
  "# for prisma migration",
  "DATABASE_URL=postgresql://\${DATABASE_USER}:\${DATABASE_PASSWORD}@\${DATABASE_HOST}:\${DATABASE_PORT}/\${DATABASE_DB}?schema=\${DATABASE_SCHEMA}",
  "",
  "# Google OAuth",
  "# https://console.cloud.google.com/apis/credentials",
  "# Set values below",
  "# AUTHORIZED JAVASCRIPT ORIGINS: http://localhost:3000",
  "# AUTHORIZED REDIRECT URIS: http://localhost:3000/api/auth/callback/google",
  "GOOGLE_CLIENT_ID=dummy",
  "GOOGLE_CLIENT_SECRET=dummy",
  "",
  "# NextAuth.js",
  "NEXTAUTH_URL=\${NEXT_PUBLIC_SITE_URL}",
  "# https://next-auth.js.org/configuration/options#secret",
  "# you must generate a new secret",
  "# error: \\"ikm\\" must be at least one byte in length'",
  "# $ openssl rand -base64 32",
  "NEXTAUTH_SECRET=TKDdLVjf7cTyTs5oWVpv04senu6fia4RGQbYHRQIR5Q=",
  "NEXTAUTH_TEST_MODE=true",
  "",
  "# start: stripe #",
  "# Stripe",
  "STRIPE_SECRET_KEY=dummy",
  "STRIPE_WEBHOOK_SECRET=dummy",
  "STRIPE_PRICE_ID=dummy",
  "# end: stripe #",
  ""
]
`;

exports[`no-stripe > should update README.md 1`] = `
[
  "",
  "## Setup",
  "",
  "\`\`\`sh",
  "# enable corepack",
  "$ npm run setup",
  "# install deps",
  "$ pnpm i",
  "# create \\".env\\" and modifying environment variables",
  "$ cp .env.sample .env",
  "\`\`\`",
  "",
  "## Development",
  "",
  "\`\`\`sh",
  "$ pnpm dev",
  "\`\`\`",
  "",
  "<!-- start: stripe -->",
  "",
  "### Debugging Stripe",
  "",
  "\`\`\`sh",
  "$ stripe listen --forward-to localhost:3000/api/payment/webhook",
  "\`\`\`",
  "",
  "<!-- end: stripe -->",
  "",
  "## Production",
  "",
  "\`\`\`sh",
  "$ pnpm db:up",
  "$ pnpm build",
  "$ pnpm start",
  "\`\`\`",
  "",
  "",
  "### Observability",
  "",
  "This template uses Jaeger as a tracing platform. The local environment doesn't require \`TRACE_EXPORTER_URL\` environment value.",
  "",
  "\`\`\`sh",
  "# open Jaeger",
  "$ open http://localhost:16686/",
  "\`\`\`",
  "",
  "",
  "## Test",
  "",
  "### Unit Test",
  "",
  "\`\`\`sh",
  "$ pnpm test",
  "$ pnpm test:watch",
  "\`\`\`",
  "",
  "",
  "### E2E Test",
  "",
  "A build task must be executed before running tests to bypass JWT logic.",
  "",
  "\`\`\`sh",
  "# install chrome",
  "$ pnpm exec playwright install chrome",
  "# build using test environments since it needs to change encode/decode functions of next-auth",
  "$ pnpm build:test",
  "",
  "$ pnpm test:e2e",
  "$ pnpm test:e2e:ui",
  "\`\`\`",
  "",
  "",
  "## Database",
  "",
  "\`\`\`sh",
  "$ pnpm db:migrate",
  "$ pnpm db:reset",
  "# view the database items",
  "$ pnpm db:studio",
  "\`\`\`",
  "",
  "## Links",
  "",
  "- [Database ER diagram](/prisma/ERD.md)",
  "- [Web App Template](https://hiroppy.github.io/web-app-template/)",
  ""
]
`;

exports[`no-stripe > should update dependencies 1`] = `
{
  "dependencies": [
    "@auth/prisma-adapter",
    "@hookform/resolvers",
    "@opentelemetry/exporter-metrics-otlp-grpc",
    "@opentelemetry/exporter-trace-otlp-grpc",
    "@opentelemetry/instrumentation-http",
    "@opentelemetry/resources",
    "@opentelemetry/sdk-metrics",
    "@opentelemetry/sdk-node",
    "@opentelemetry/sdk-trace-base",
    "@opentelemetry/semantic-conventions",
    "@prisma/client",
    "@prisma/instrumentation",
    "clsx",
    "next",
    "next-auth",
    "react",
    "react-dom",
    "react-hook-form",
    "stripe",
    "zod"
  ],
  "devDependencies": [
    "@biomejs/biome",
    "@next/env",
    "@playwright/test",
    "@tailwindcss/postcss",
    "@testing-library/react",
    "@types/node",
    "@types/react",
    "@types/react-dom",
    "@vitejs/plugin-react",
    "jsdom",
    "knip",
    "lefthook",
    "postcss",
    "prettier",
    "prisma",
    "prisma-erd-generator",
    "tailwindcss",
    "testcontainers",
    "typescript",
    "vitest"
  ]
}
`;

exports[`no-stripe > should update env.ts 1`] = `
[
  "import { loadEnvConfig } from \\"@next/env\\";",
  "import { z } from \\"zod\\";",
  "",
  "export type Schema = z.infer<typeof schema>;",
  "",
  "const schema = z.object({",
  "  NODE_ENV: z",
  "    .union([",
  "      z.literal(\\"development\\"),",
  "      z.literal(\\"test\\"),",
  "      z.literal(\\"production\\"),",
  "    ])",
  "    .default(\\"development\\"),",
  "",
  "  // for client and server",
  "  NEXT_PUBLIC_SITE_URL: z.string().url(),",
  "",
  "  // for server",
  "  DATABASE_USER: z.string().min(1),",
  "  DATABASE_PASSWORD: z.string().min(1),",
  "  DATABASE_DB: z.string().min(1),",
  "  DATABASE_HOST: z.string().min(1),",
  "  DATABASE_PORT: z.coerce.number().min(1),",
  "  DATABASE_SCHEMA: z.string().min(1),",
  "  DATABASE_URL: z.string().min(1),",
  "",
  "  GOOGLE_CLIENT_ID: z.string().min(1),",
  "  GOOGLE_CLIENT_SECRET: z.string().min(1),",
  "",
  "  NEXTAUTH_URL: z.string().min(1),",
  "  NEXTAUTH_SECRET: z.string().min(1),",
  "",
  "  TRACE_EXPORTER_URL: z.string().url().optional().or(z.literal(\\"\\")),",
  "",
  "  /* start: stripe */",
  "  STRIPE_PRICE_ID: z.string().min(1),",
  "  STRIPE_SECRET_KEY: z.string().min(1),",
  "  STRIPE_WEBHOOK_SECRET: z.string().min(1),",
  "  /* end: stripe */",
  "});",
  "",
  "export function config() {",
  "  const { combinedEnv } = loadEnvConfig(process.cwd());",
  "  const res = schema.safeParse(combinedEnv);",
  "",
  "  if (res.error) {",
  "    console.error(\\"\\\\x1b[31m%s\\\\x1b[0m\\", \\"[Errors] environment variables\\");",
  "    console.error(JSON.stringify(res.error.errors, null, 2));",
  "    process.exit(1);",
  "  }",
  "}",
  ""
]
`;

exports[`no-stripe > should update prisma/schema.prisma 1`] = `
[
  "// https://pris.ly/d/prisma-schema",
  "",
  "datasource db {",
  "  provider = \\"postgresql\\"",
  "  url      = env(\\"DATABASE_URL\\")",
  "}",
  "",
  "generator client {",
  "  provider        = \\"prisma-client-js\\"",
  "  previewFeatures = [\\"fullTextSearchPostgres\\"]",
  "}",
  "",
  "generator erd {",
  "  provider                  = \\"prisma-erd-generator\\"",
  "  theme                     = \\"forest\\"",
  "  output                    = \\"ERD.md\\"",
  "  includeRelationFromFields = true",
  "}",
  "",
  "// https://authjs.dev/getting-started/adapters/prisma#schema",
  "model Account {",
  "  id                String   @id @default(cuid())",
  "  userId            String   @map(\\"user_id\\")",
  "  type              String",
  "  provider          String",
  "  providerAccountId String   @map(\\"provider_account_id\\")",
  "  refresh_token     String?  @db.Text",
  "  access_token      String?  @db.Text",
  "  expires_at        Int?",
  "  token_type        String?",
  "  scope             String?",
  "  id_token          String?  @db.Text",
  "  user              User     @relation(fields: [userId], references: [id], onDelete: Cascade)",
  "  createdAt         DateTime @default(now()) @map(\\"created_at\\")",
  "  updatedAt         DateTime @updatedAt @map(\\"updated_at\\")",
  "",
  "  @@unique([provider, providerAccountId])",
  "  @@map(\\"accounts\\")",
  "}",
  "",
  "model User {",
  "  id            String         @id @default(cuid())",
  "  name          String?",
  "  email         String?        @unique",
  "  emailVerified DateTime?      @map(\\"email_verified\\")",
  "  image         String?",
  "  accounts      Account[]",
  "  createdAt     DateTime       @default(now()) @map(\\"created_at\\")",
  "  updatedAt     DateTime       @updatedAt @map(\\"updated_at\\")",
  "  // https://authjs.dev/guides/basics/role-based-access-control",
  "  role          Role           @default(USER)",
  "  items         Item[]",
  "  stripeId      String?        @unique @map(\\"stripe_id\\") // cus_XXXX",
  "  subscriptions Subscription[]",
  "",
  "  @@map(\\"users\\")",
  "}",
  "",
  "model Subscription {",
  "  id                String    @id @default(cuid())",
  "  subscriptionId    String    @unique @map(\\"subscription_id\\") // sub_XXXX",
  "  status            String",
  "  currentPeriodEnd  DateTime? @map(\\"current_period_end\\")",
  "  cancelAtPeriodEnd Boolean   @default(false) @map(\\"cancel_at_period_end\\")",
  "  createdAt         DateTime  @default(now()) @map(\\"created_at\\")",
  "  updatedAt         DateTime  @updatedAt @map(\\"updated_at\\")",
  "  userId            String    @map(\\"user_id\\")",
  "  user              User      @relation(fields: [userId], references: [id])",
  "",
  "  @@map(\\"subscriptions\\")",
  "}",
  "",
  "model Item {",
  "  id        String   @id @default(cuid())",
  "  content   String",
  "  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)",
  "  userId    String   @map(\\"user_id\\")",
  "  createdAt DateTime @default(now()) @map(\\"created_at\\")",
  "  updatedAt DateTime @updatedAt @map(\\"updated_at\\")",
  "",
  "  @@map(\\"items\\")",
  "}",
  "",
  "enum Role {",
  "  USER",
  "  ADMIN",
  "}",
  ""
]
`;
